--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -2,6 +2,6 @@
   <li *ngFor="let node of documentsData">
     <span *ngIf="node.children != 0"><b>+</b></span>
     <span (click)="toggleChild(node)"> {{ node.name }} </span>
-    <app-tree *ngIf="node.showChildren" [treeData]="node.children"></app-tree>
+    <app-tree *ngIf="node.showChildren" [treeData]="node.documents"></app-tree>
   </li>
 </ul>
