--- a/src/app/tree/tree.component.html
+++ b/src/app/tree/tree.component.html
@@ -3,5 +3,10 @@
     <span *ngIf="node.children != 0"><b>+</b></span>
     <span (click)="toggleChild(node)"> {{ node.name }} </span>
     <app-tree *ngIf="node.showChildren" [treeData]="node.children"></app-tree>
+
+    <app-tree
+      *ngIf="node.showChildren || node.documents != 0"
+      [treeData]="node.documents"
+    ></app-tree>
   </li>
 </ul>
